[package]
name = "rat-in-a-tube-definitions"
description = "Definitions for Rat In a Tube"
version = "0.2.3"
authors = ["Snowy Mouse"]
license = "GPL-3.0-only"
repository = "https://github.com/SnowyMouse/riat"

[lib]
proc-macro = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
