[package]
name = "riatc"
description = "C and C++ bindings for Rat in a Tube"
version = "0.2.0"
authors = ["Snowy Mouse"]
license = "GPL-3.0-only"
publish = false

[dependencies]
rat-in-a-tube = { path = "../" }

[lib]
name = "riatc"
crate-type = ["staticlib"] # static only because packaging is easier with it
